# vote4film

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
src/calender/: context_processors.py  forms.py  models.py  views.py
src/calender/templates/calender/: register_form.html
src/film/: models.py  urls.py  views.py
src/film/clients/: imdb.py
src/film/core/: types.py
src/film/migrations/: 0001_initial.py
src/films/: models.py  urls.py  views.py
src/films/clients/: omdb.py
src/films/core/: types.py
src/films/migrations/: 0002_auto_20191102_1705.py
src/films/templates/films/: film_form.html  film_list.html
src/films/templates/films/includes/: film_card.html
src/schedule/: views.py
src/schedule/templates/schedule/: schedule.html
src/vote4film/: middleware.py  settings.py  urls.py
src/vote4film/vote4film/: middleware.py  settings.py
src/votes/: context_processors.py  models.py  urls.py  views.py
src/votes/migrations/: 0001_initial.py
src/votes/templates/votes/: vote_aggregate.html  vote_form.html
src/votes/templates/votes/includes/: film_card.html
src/web/static/web/: style.css
src/web/templates/web/: base.html  home.html
tests/film/clients/: omdb_tt1853728.json  test_imdb.py  test_omdb.py  tt1853728.html
tests/films/: factories.py  test_views.py
tests/films/clients/: test_imdb.py  test_omdb.py
