[tool.poetry]
name = "vote4film"
version = "0.1.0"
description = ""
authors = ["QasimK <noreply@QasimK.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
bandit = "^1.6"
pyflakes = "^2.1"
safety = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
