[tool.poetry]
name = "vote4film"
version = "0.1.0"
description = ""
authors = ["QasimK <noreply@QasimK.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"
requests = "^2.22"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
django-extensions = "^2.2"
black = {version = "=19.10b0", allows-prereleases = true}
isort = "^4.3"
bandit = "^1.6"
pyflakes = "^2.1"
safety = "^1.8"
pytest = "^5.2"
responses = "^0.10.6"
werkzeug = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
